--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,12 @@ name = "http_tools"
 version = "0.1.0"
 authors = ["Jon Davis <JonathonDevinDavis@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A library of functions for working with the Http type"
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/Jon-Davis/http_tools"
+keywords = ["http", "router", "mux"]
+categories = ["Web programming"]
 
 [dependencies]
 http = "0.1"
