--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/Jon-Davis/http_tools"
 keywords = ["http", "router", "mux"]
-categories = ["Web programming"]
+categories = ["web-programming"]
 
 [dependencies]
 http = "0.1"
