--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ categories = ["web-programming"]
 [dependencies]
 http = "0.2"
 bytes = "0.5"
+thiserror = "1.0"
+anyhow = "1.0"
 
 [dev-dependencies]
 futures = "0.3.5"
