--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "http_tools"
-version = "0.1.3"
+version = "0.2.0"
 authors = ["Jon Davis <JonathonDevinDavis@gmail.com>"]
 edition = "2018"
 description = "A library of functions for working with the Http type"
@@ -12,9 +12,13 @@ categories = ["web-programming"]
 
 [dependencies]
 http = "0.2"
-bytes = "0.5"
+bytes = "1"
 thiserror = "1.0"
 anyhow = "1.0"
 
 [dev-dependencies]
 futures = "0.3.5"
+hyper = { version = "0.14", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
+lazy_static = "1.4.0"
+sqlx = { version = "0.4.2", features = [ "runtime-tokio-native-tls", "sqlite"] }
